# fenicsx-pctools

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  README.rst  conftest.py  launch-container.sh  pyproject.toml  requirements.txt  setup.py
demo/: demo_mixed-poisson.py  demo_motivation.py  demo_navier-stokes-pcd.py  demo_solver-config.py
demo/mixed-poisson/: demo_mixed-poisson.py
demo/mixed-poisson-paper/: demo_mixed-poisson-paper.py
demo/navier-stokes-pcd/: demo_navier-stokes-pcd.py
demo/solver-config/: demo_solver-config.py
doc/: Makefile
doc/source/: .gitignore  api.rst  conf.py  demos.rst  index.rst  references.bib  references.rst
docker/: Dockerfile  build-image.sh
examples/capillary/: generate_capillary_output.py  gmsh_capillary.py  output_capillary.py  petsc_NavierStokes_lu.conf  petsc_NavierStokes_pcd.conf  petsc_OldroydB_lu.conf  petsc_OldroydB_pcd.conf  petsc_PowerLaw_lu.conf  problem_NavierStokes.py  problem_OldroydB.py  problem_PowerLaw.py  snescontext_capillary.py  test_capillary.py
examples/cylinder/: generate_cylinder_output.py  gmsh_cylinder.py  output_cylinder.py  petsc_NavierStokes_lu.conf  petsc_OldroydB_lu.conf  problem_NavierStokes.py  problem_OldroydB.py  snescontext_cylinder.py  test_cylinder.py
examples/cylinder/sandbox/: test_CR_stabilization.py  test_bdm_interpolation.py
examples/rayleigh-benard-convection/: generate_rayleigh_benard_output.py  hpc_launcher_rayleigh_benard.sh  hpc_run_rayleigh_benard_strong-scale.sh  hpc_run_rayleigh_benard_weak-scale.sh  output_rayleigh_benard.py  problem_rayleigh_benard.py  pvscript_rayleigh_benard.py  test_rayleigh_benard.py
fenics_pctools/: __init__.py
fenics_pctools/mat/: splittable.py
fenics_pctools/pc/: base.py  pcd.py
fenics_pctools/tests/: test_nested_fieldsplit.py  test_splittable_matrix_block.py  test_splittable_matrix_monolithic.py
fenicsx_pctools/: __init__.py  utils.py
fenicsx_pctools/mat/: __init__.py  splittable.py
fenicsx_pctools/pc/: __init__.py  base.py  pcd.py  wrapped.py
fenicsx_pctools/tests/: test_splittable_matrix_monolithic.py
tests/: test_memory_control.py  test_nested_fieldsplit.py  test_splittable_matrix_block.py  test_splittable_matrix_monolithic.py  test_version.py
